--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section class="container c1">
         <header class="flex">
             <div class="header-logo-title flex">
-                <div class="logo">  <a href="index.html"><img src="Image/clothes-1.png" alt="Logo Blanc Odejda"></a></div>
+                <div class="logo">  <a href="index.html"><img src="images/Header/clothes-1.png" alt="Logo Blanc Odejda"></a></div>
                 <div class="nom-marque"><h1>ODEJDA</h1></div>
             </div>
 
@@ -34,7 +34,7 @@
                     </div>
                 
                     <div class="basket flex">
-                    <img src="image/shopping-basket 1.png" alt="panier d'achat">
+                    <img src="images/Header/shopping-basket 1.png" alt="panier d'achat">
                     </div>
                 </div>
             </div>
