--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
             <div class="container-img flex">
                 <div class="box box1">
                     <h3>FEMMES</h3>
-                    <img src="image/Untitled/image 9.png" alt="Femme">
+                    <img src="images/Pageprincipale/image 9.png" alt="Femme">
                 </div>
                 <div class="box box2">
                     <h3>MIXTE</h3>
-                    <a href="index-mixte.html" target="_blank"><img src="image/Untitled/image 10.png" alt="MIXTE"></a>
+                    <a href="index-mixte.html" target="_blank"><img src="images/Pageprincipale/image 10.png" alt="MIXTE"></a>
                 </div>
                 <div class="box box3">
                     <h3>HOMMES</h3>
-                    <img src="image/Untitled/image 12.png" alt="Homme">
+                    <img src="images/Pageprincipale/image 12.png" alt="Homme">
                 </div>
             </div>
         </div>
@@ -109,7 +109,7 @@
         <div class="container-secondemain flex">
             <h2>SECONDE<br>
                  <span class="main">MAIN</span></h2>
-                 <a href="index-seconde.html" target="_blank"><img src="image/Untitled/Seconde main.png" alt="Seconde main"></a>
+                 <a href="index-seconde.html" target="_blank"><img src="images/Pageprincipale/Seconde main.png" alt="Seconde main"></a>
         </div>
     </section>
 
