--- a/index.html
+++ b/index.html
@@ -120,22 +120,22 @@
         <h2>NOUVEAUTÉS</h2>
         <div class="container-nouveautes grid">
             <div class="box-article articleb1">
-                <img src="image/Nouveauté/veste-kaki.png" alt="bombers kaki">
+                <img src="images/Nouveauté/veste-kaki.png" alt="bombers kaki">
                 <h4>Blouson bomber - darkolive</h4>
                 <p>29, 90€</p>
             </div>
             <div class="box-article articleb2">
-                <img src="image/Nouveauté/Chemise.png" alt="Chemise courte bleu">
+                <img src="images/Nouveauté/Chemise.png" alt="Chemise courte bleu">
                 <h4>Chemise manches courte - Bleu/Blanc</h4>
                 <p>15, 90€</p>
             </div>
             <div class="box-article articleb3">
-                <img src="Image/Nouveauté/jogging.png" alt="Jogging gris">
+                <img src="images/Nouveauté/jogging.png" alt="Jogging gris">
                 <h4>Pantalon de survêtement - Gris</h4>
                 <p>21, 90€</p>
             </div>
             <div class="box-article articleb4">
-                <img src="image/Nouveauté/sweat-rose.png" alt="sweat a capuche rose">
+                <img src="images/Nouveauté/sweat-rose.png" alt="sweat a capuche rose">
                 <h4>Sweat à capuche-Rose</h4>
                 <p>25, 00€</p>
             </div>
